# ChangeLog for dev-java/cglib
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  11 Sep 2013; Johann Schmitz <ercpe@gentoo.org> cglib-3.0.ebuild:
  Made it tree-ready

*cglib-3.0 (01 Sep 2013)

  01 Sep 2013; Johann Schmitz <ercpe@gentoo.org> +cglib-3.0.ebuild,
  +files/cglib-3.0-build.xml.patch, +files/words.txt, +metadata.xml:
  Version bump of cglib to 3.0 (from dmol overlay)